# cpp-build-templates

./: .gitignore  CMakeLists.txt  README.md
cmake/: deps.cmake
external_deps/: CMakeLists.txt
programs/: CMakeLists.txt  helloworld_program.cc
scripts/: update_qtcreator_generic_project.py
src/: CMakeLists.txt
src/helloworld/: helloworld.cc  helloworld.cpp  helloworld.h
tests/: CMakeLists.txt  helloworld_gtest.cc  helloworld_test.cc  testsuit_gtest.cpp
